--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "4.0.1",
     "reactstrap": "6.5.0",
+    "ssri": "8.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
